add rating to driver

--- a/app/src/main/res/layout/main_passenger_fragment.xml
+++ b/app/src/main/res/layout/main_passenger_fragment.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:alpha="0.0"
         android:fontFamily="@font/roboto"
         android:gravity="center"
         android:paddingStart="40dp"
@@ -27,7 +28,6 @@
         android:text="@string/offerYourPrice"
         android:textColor="@android:color/black"
         android:textSize="24sp"
-        android:alpha="0.0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />
@@ -43,11 +43,12 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
-        android:visibility="invisible"
         android:layout_height="70dp"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="@android:color/white"
+        android:elevation="10dp"
+        android:visibility="invisible"
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/bg_nav_item_color"
         app:itemTextColor="@drawable/bg_nav_item_color"
@@ -55,269 +56,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_menu_passanger" />
-
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/main_info_layout"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_alignParentBottom="true"-->
-    <!--        android:background="@drawable/bg_corners_layout"-->
-    <!--        android:elevation="30dp"-->
-    <!--        android:orientation="vertical"-->
-    <!--        android:visibility="gone"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/nav_view">-->
-
-
-    <!--        <LinearLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:orientation="horizontal"-->
-    <!--            android:paddingTop="5dp">-->
-
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="50dp"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_marginTop="2dp"-->
-    <!--                    android:src="@drawable/ic_input_marker_from" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:paddingTop="5dp"-->
-    <!--                    android:paddingBottom="5dp"-->
-    <!--                    android:src="@drawable/ic_input_line" />-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_input_marker_to" />-->
-
-
-    <!--            </LinearLayout>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <TextView-->
-    <!--                    android:id="@+id/from_address"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="62dp"-->
-    <!--                    android:ellipsize="end"-->
-    <!--                    android:fontFamily="@font/roboto"-->
-    <!--                    android:gravity="center_vertical"-->
-    <!--                    android:maxLines="2"-->
-    <!--                    android:paddingStart="0dp"-->
-    <!--                    android:paddingEnd="10dp"-->
-    <!--                    android:textAlignment="gravity"-->
-    <!--                    android:textColor="@android:color/black"-->
-    <!--                    android:textSize="16sp" />-->
-
-
-    <!--                <View-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="1px"-->
-    <!--                    android:layout_marginTop="2dp"-->
-    <!--                    android:layout_marginEnd="15dp"-->
-    <!--                    android:layout_marginBottom="1dp"-->
-    <!--                    android:background="#30000000" />-->
-
-
-    <!--                <TextView-->
-    <!--                    android:id="@+id/to_address"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="62dp"-->
-    <!--                    android:ellipsize="end"-->
-    <!--                    android:fontFamily="@font/roboto"-->
-    <!--                    android:gravity="center_vertical"-->
-    <!--                    android:maxLines="2"-->
-    <!--                    android:paddingStart="0dp"-->
-    <!--                    android:paddingEnd="10dp"-->
-    <!--                    android:textAlignment="gravity"-->
-    <!--                    android:textColor="@android:color/black"-->
-    <!--                    android:textSize="16sp" />-->
-
-
-    <!--            </LinearLayout>-->
-
-
-    <!--        </LinearLayout>-->
-
-    <!--        <LinearLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:orientation="horizontal"-->
-    <!--            android:paddingStart="16dp"-->
-    <!--            android:paddingEnd="15dp"-->
-    <!--            android:weightSum="1">-->
-
-
-    <!--            <TextView-->
-    <!--                android:id="@+id/offer_price"-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_weight="1"-->
-    <!--                android:drawableStart="@drawable/ic_ruble"-->
-    <!--                android:drawablePadding="20dp"-->
-    <!--                android:hint="@string/offer_price"-->
-    <!--                android:paddingTop="5dp"-->
-    <!--                android:paddingBottom="20dp"-->
-    <!--                android:textColor="#000000"-->
-    <!--                android:textColorHint="#50000000"-->
-    <!--                android:textSize="14sp" />-->
-
-    <!--            <ImageButton-->
-    <!--                android:id="@+id/info_price"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_marginTop="6dp"-->
-    <!--                android:background="@android:color/white"-->
-    <!--                android:src="@drawable/ic_info_price"-->
-    <!--                android:visibility="gone" />-->
-
-
-    <!--        </LinearLayout>-->
-
-
-    <!--        <View-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="1dp"-->
-    <!--            android:background="#30000000" />-->
-
-    <!--        <LinearLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:orientation="horizontal"-->
-    <!--            android:weightSum="1">-->
-
-
-    <!--            <LinearLayout-->
-    <!--                android:id="@+id/selected_payment_method"-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_weight="0.5"-->
-    <!--                android:gravity="center|start"-->
-    <!--                android:orientation="horizontal"-->
-    <!--                android:paddingStart="15dp"-->
-    <!--                android:paddingTop="20dp"-->
-    <!--                android:paddingBottom="20dp"-->
-    <!--                android:visibility="gone">-->
-
-    <!--                <ImageView-->
-    <!--                    android:id="@+id/payment_method_img"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_gravity="center"-->
-    <!--                    android:layout_marginTop="2dp"-->
-    <!--                    android:minWidth="40dp" />-->
-
-    <!--                <TextView-->
-    <!--                    android:id="@+id/number_card"-->
-    <!--                    android:layout_width="match_parent"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_gravity="center"-->
-    <!--                    android:fontFamily="@font/roboto"-->
-    <!--                    android:paddingStart="5dp"-->
-    <!--                    android:textColor="@android:color/black" />-->
-
-    <!--            </LinearLayout>-->
-
-    <!--            <TextView-->
-    <!--                android:id="@+id/payment_method"-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_weight="0.5"-->
-    <!--                android:drawableStart="@drawable/ic_payment_method"-->
-    <!--                android:drawablePadding="11dp"-->
-    <!--                android:fontFamily="@font/roboto"-->
-    <!--                android:gravity="center|start"-->
-    <!--                android:paddingStart="15dp"-->
-    <!--                android:paddingTop="20dp"-->
-    <!--                android:paddingEnd="10dp"-->
-    <!--                android:paddingBottom="20dp"-->
-    <!--                android:text="@string/payment_method"-->
-    <!--                android:textColor="@android:color/black" />-->
-
-
-    <!--            <LinearLayout-->
-    <!--                android:id="@+id/comment_btn"-->
-    <!--                android:layout_width="0dp"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:layout_weight="0.5"-->
-    <!--                android:orientation="vertical"-->
-    <!--                android:paddingEnd="15dp">-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_gravity="end"-->
-    <!--                    android:layout_marginTop="21dp"-->
-    <!--                    android:fontFamily="@font/roboto"-->
-    <!--                    android:gravity="end"-->
-    <!--                    android:text="@string/comment"-->
-    <!--                    android:textColor="@android:color/black" />-->
-
-    <!--                <TextView-->
-    <!--                    android:id="@+id/comment_min_text"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:layout_gravity="end"-->
-    <!--                    android:ellipsize="end"-->
-    <!--                    android:fontFamily="@font/roboto"-->
-    <!--                    android:gravity="end"-->
-    <!--                    android:maxLines="1"-->
-    <!--                    android:paddingStart="18dp"-->
-    <!--                    android:singleLine="true"-->
-    <!--                    android:textColor="#60000000"-->
-    <!--                    android:textSize="13sp"-->
-    <!--                    android:translationY="-5dp" />-->
-
-    <!--            </LinearLayout>-->
-
-
-    <!--        </LinearLayout>-->
-
-    <!--        <RelativeLayout-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/order_car"-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="50dp"-->
-    <!--                android:layout_marginStart="15dp"-->
-    <!--                android:layout_marginEnd="15dp"-->
-    <!--                android:layout_marginBottom="20dp"-->
-    <!--                android:background="@drawable/bg_btn_gray"-->
-    <!--                android:clickable="false"-->
-    <!--                android:fontFamily="@font/roboto"-->
-    <!--                android:shadowColor="@color/colorBlue"-->
-    <!--                android:text="@string/getDriver"-->
-    <!--                android:textAllCaps="false"-->
-    <!--                android:textSize="16sp" />-->
-
-    <!--            <ProgressBar-->
-    <!--                android:id="@+id/progress_bar_btn"-->
-    <!--                android:layout_width="30dp"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_centerHorizontal="true"-->
-    <!--                android:layout_marginTop="2dp"-->
-    <!--                android:elevation="10dp"-->
-    <!--                android:theme="@style/WhiteProgressBar"-->
-    <!--                android:visibility="gone" />-->
-    <!--        </RelativeLayout>-->
-
-
-    <!--    </LinearLayout>-->
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
