--- a/app/src/main/res/layout/rating_passenger_activity.xml
+++ b/app/src/main/res/layout/rating_passenger_activity.xml
@@ -61,7 +61,7 @@
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="200dp"
-                    android:layout_height="33dp"
+                    android:layout_height="35dp"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="15dp"
@@ -81,7 +81,7 @@
                     <TextView
                         android:id="@+id/user_rating"
                         android:layout_width="80dp"
-                        android:layout_height="33dp"
+                        android:layout_height="35dp"
                         android:drawableStart="@drawable/ic_big_star"
                         android:drawablePadding="12dp"
                         android:fontFamily="@font/roboto"
@@ -152,6 +152,7 @@
                 android:id="@+id/text_empty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
                 android:gravity="center_horizontal"
                 android:text="@string/do15ordersForCalcRating"
                 android:textColor="#60000000"
