add car info to driver

--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -319,7 +319,7 @@
                             android:textSize="16sp" />
 
                         <androidx.appcompat.widget.SwitchCompat
-                            android:checked="true"
+                            android:checked="false"
                             android:id="@+id/notifications_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
