add barring for driver without geo

--- a/app/src/main/res/layout/orders_view_fragment.xml
+++ b/app/src/main/res/layout/orders_view_fragment.xml
@@ -29,13 +29,22 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/searchOrders"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@android:color/darker_gray"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/enable_geo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/enableGeo"
+            android:textColor="@android:color/darker_gray"
+            android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/orders_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -45,6 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/CustomProgressBar"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
