--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -115,13 +115,14 @@
                     android:textSize="12sp" />
 
                 <ImageView
-                    android:layout_marginTop="1dp"
                     android:id="@+id/moderate_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:layout_marginTop="1dp"
                     android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_clock_moderate" />
+                    android:src="@drawable/ic_clock_moderate"
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
@@ -296,6 +297,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
