--- a/app/src/main/res/layout/order_profits_item.xml
+++ b/app/src/main/res/layout/order_profits_item.xml
@@ -20,10 +20,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground"
         android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Light">
+        android:paddingTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
