--- a/app/src/main/res/layout/detail_ride_layout.xml
+++ b/app/src/main/res/layout/detail_ride_layout.xml
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
+        android:alpha="0"
         android:background="@drawable/bg_back_btn"
         android:elevation="12dp"
         android:padding="13dp"
-        android:alpha="0"
         android:src="@drawable/ic_back_arrow" />
 
 
@@ -406,10 +406,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_corners_layout"
+            android:clickable="true"
             android:elevation="40dp"
+            android:focusable="true"
             android:orientation="vertical"
             app:behavior_peekHeight="0dp"
-            app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -447,16 +449,16 @@
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/on_map_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0"
-            android:elevation="30dp"
-            android:background="@android:color/black"
-            android:visibility="gone" />
+
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
+    <View
+        android:id="@+id/on_map_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@android:color/black"
+        android:elevation="30dp"
+        android:visibility="gone" />
 </RelativeLayout>
