--- a/app/src/main/res/layout/create_ride_layout.xml
+++ b/app/src/main/res/layout/create_ride_layout.xml
@@ -45,6 +45,7 @@
         android:id="@+id/center_position"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:translationY="-50px"
         android:layout_gravity="center"
         android:layout_marginStart="2dp"
         android:layout_marginBottom="55dp"
@@ -56,7 +57,7 @@
         android:layout_height="15dp"
         android:layout_gravity="center"
         android:layout_marginStart="2dp"
-        android:alpha="0.6"
+        android:alpha="0.3"
         android:src="@drawable/ic_shadow_marker" />
 
 
