fix bottom sheets shadow

--- a/app/src/main/res/layout/get_offers_layout.xml
+++ b/app/src/main/res/layout/get_offers_layout.xml
@@ -444,7 +444,9 @@
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:background="@drawable/bg_corners_layout"
+            android:clickable="true"
             android:elevation="30dp"
+            android:focusable="true"
             android:orientation="vertical"
             app:behavior_peekHeight="0dp"
             app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
@@ -594,8 +596,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
-        android:elevation="40dp"
         android:background="@android:color/black"
+        android:elevation="40dp"
         android:visibility="gone" />
 
 </RelativeLayout>
