--- a/app/src/main/res/layout/track_ride_layout.xml
+++ b/app/src/main/res/layout/track_ride_layout.xml
@@ -358,7 +358,9 @@
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:background="@drawable/bg_corners_layout"
+            android:clickable="true"
             android:elevation="30dp"
+            android:focusable="true"
             android:orientation="vertical"
             app:behavior_peekHeight="0dp"
             app:layout_behavior="bonch.dev.poputi.presentation.base.MBottomSheet">
