--- a/app/src/main/res/layout/onboarding_activity.xml
+++ b/app/src/main/res/layout/onboarding_activity.xml
@@ -18,12 +18,12 @@
         <TextView
             android:id="@+id/title_onb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="62dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="15dp"
             android:fontFamily="@font/roboto"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:textColor="@android:color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -32,7 +32,7 @@
         <ImageView
             android:id="@+id/img_onb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
