--- a/app/src/main/res/layout/profile_detail_activity.xml
+++ b/app/src/main/res/layout/profile_detail_activity.xml
@@ -319,10 +319,10 @@
                             android:textSize="16sp" />
 
                         <androidx.appcompat.widget.SwitchCompat
-                            android:checked="false"
                             android:id="@+id/notifications_switch"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:checked="false"
                             android:thumb="@drawable/bg_thumb"
                             app:track="@drawable/bg_track" />
                     </LinearLayout>
@@ -363,8 +363,10 @@
         android:id="@+id/logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:theme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <View
@@ -391,7 +393,8 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:elevation="50dp">
 
 
         <LinearLayout
@@ -506,7 +509,6 @@
         </LinearLayout>
 
 
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <View
@@ -515,29 +517,8 @@
         android:layout_height="match_parent"
         android:alpha="0"
         android:background="@android:color/black"
+        android:elevation="20dp"
         android:visibility="gone" />
-
-
-    <View
-        android:id="@+id/on_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.7"
-        android:background="@android:color/white"
-        android:clickable="true"
-        android:focusable="true"
-        android:visibility="gone" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/CustomProgressBar"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
