--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -258,7 +258,7 @@
                 android:gravity="center_vertical"
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp"
-                android:text="@string/support"
+                android:text="@string/contactWithSupport"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:theme="@style/ThemeOverlay.AppCompat.Light" />
